# libstrophe

./: Makefile.am  README.txt  bootstrap.sh  configure.ac  libstrophe.pc.in  strophe.h
examples/: bot.c
src/: auth.c  common.h  conn.c  ctx.c  event.c  parser_expat.c  parser_libxml2.c  thread.c  tls_openssl.c
